# random_grouping

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  prelude.rs  random_grouping.rs  size_rounding.rs  sized_iter.rs  staff.rs
tests/: test.rs
tests/for_test/: helper.rs  mod.rs  samples.rs
