[package]
name = "random_grouping"
version = "0.1.0"
authors = ["Nossie531"]
edition = "2021"
description = "Random grouping tool."
repository = "https://github.com/nossie531/random_grouping"
license = "MIT OR Apache-2.0"
keywords = ["rand", "grouping"]

[dependencies]
nameof = "1.2.2"
simple_scan = "0.1"
rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
static_assertions = "1.1.0"
test_panic = "0.1"
