[package]
name = "random_grouping"
version = "0.4.2"
authors = ["Nossie531"]
edition = "2024"
description = "Utility for random grouping."
repository = "https://github.com/nossie531/random_grouping"
license = "MIT OR Apache-2.0"
keywords = ["rand", "grouping"]

[dependencies]
simple_scan = "0.4"
rand = "0.9"
rand_pcg = "0.9"

[dev-dependencies]
static_assertions = "1"
test_panic = "0.4"
